--- a/quanshiproject/pom.xml
+++ b/quanshiproject/pom.xml
@@ -37,4 +37,27 @@
      <version>4.3</version>
 	</dependency>
   </dependencies>
+   <reporting>
+
+       <plugins>
+
+        <plugin>
+
+        <groupId>org.apache.maven.plugins</groupId>
+
+        <artifactId>maven-surefire-report-plugin</artifactId>
+
+        <version>2.12.2</version>
+
+        <configuration>
+
+          <showSuccess>false</showSuccess>
+
+        </configuration>
+
+      </plugin>
+
+    </plugins>
+
+    </reporting>
 </project>
