--- a/quanshiproject/pom.xml
+++ b/quanshiproject/pom.xml
@@ -37,6 +37,20 @@
      <version>4.3</version>
 	</dependency>
   </dependencies>
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.5</version>
+      <configuration>
+        <includes>
+          <include>**/*Test.java</include>
+        </includes>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
    <reporting>
 
        <plugins>
